Blender's code for finding files gets confused with files that are higher up in the file hierachy than itself; especially when collaborating #42588

Closed
opened 2014-11-13 14:48:03 +01:00 by Bart Heijltjes · 13 comments

Blender Version
Broken: 2.72b

Short description of error
Blender tends to get very confused with relative paths when files are higher in the directory structure than the .blend file itself.
It sometimes gets paths that go all around the hard drive (\level1folderA\SubFolderA....\level1folderB). This used to break a lot of links in our project because the filepath would 'wander' outside of the Shared directory structure onto collaborator's personal drives.
Finally we had to switch to a shared drive letter to overcome the problem.

Here's some filepaths for textures that I found in our project (I've replaced some foldernames with ):
............\Desktop..\Google Drive<projectname>\Art\Models\Cock_Stand....\Textures\Generic\Ship_Trimmings_Decor_Silver.png............\Dropbox<company>\Models......\Google Drive<projectname>\Art\Textures\Generic\Band_steel.png <== Yes, this one first goes into a dropbox and then back out and THEN onto the google drive

Once the filepath leaves the project folder it breaks for everyone else because they don't have the same directory structure beyond that.

Exact steps for others to reproduce the error

One way I found to reliably reproduce the problem is to use the 'Make paths absolute' function on a relative path that has ".."s in it.
blenderabsolutepaths.jpg

To be honest I have no idea how exactly the examples above happen; just that they do frequently enough to make relative paths unusable for our project.

**Blender Version** Broken: 2.72b **Short description of error** Blender tends to get very confused with relative paths when files are higher in the directory structure than the .blend file itself. It sometimes gets paths that go all around the hard drive (\level1folderA\SubFolderA\..\..\level1folderB\). This used to break a lot of links in our project because the filepath would 'wander' outside of the Shared directory structure onto collaborator's personal drives. Finally we had to switch to a shared drive letter to overcome the problem. Here's some filepaths for textures that I found in our project (I've replaced some foldernames with <replacement names>): *..\..\..\..\..\..\Desktop\..\Google Drive\<projectname>\Art\Models\Cock_Stand\..\..\Textures\Generic\Ship_Trimmings_Decor_Silver.png*..\..\..\..\..\..\Dropbox\<company>\Models\..\..\..\Google Drive\<projectname>\Art\Textures\Generic\Band_steel.png <== Yes, this one first goes into a dropbox and then back out and THEN onto the google drive Once the filepath leaves the project folder it breaks for everyone else because they don't have the same directory structure beyond that. **Exact steps for others to reproduce the error** One way I found to reliably reproduce the problem is to use the 'Make paths absolute' function on a relative path that has "\..\"s in it. ![blenderabsolutepaths.jpg](https://archive.blender.org/developer/F123630/blenderabsolutepaths.jpg) To be honest I have no idea how exactly the examples above happen; just that they do frequently enough to make relative paths unusable for our project.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WispBart

Added subscriber: @WispBart

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Might be a windows only issue, I did a test on linux with relative path of texture image 2 levels up and it was reconstructed correctly on "make paths absolute".

Might be a windows only issue, I did a test on linux with relative path of texture image 2 levels up and it was reconstructed correctly on "make paths absolute".

Added subscribers: @MartijnBerger, @ThomasDinges, @mont29

Added subscribers: @MartijnBerger, @ThomasDinges, @mont29

Martijn, Thomas, mind checking this and see if you can confirm? Made a few checks here on linux and couldn’t reproduce either…

Martijn, Thomas, mind checking this and see if you can confirm? Made a few checks here on linux and couldn’t reproduce either…
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali
Member

I can perhaps add some weight to the windows theory: on our project we frequently get files back from windows users with similarly weird and broken paths, but only from windows, not other os users.
It used to be much worse some years ago, but perhaps there are still lingering bugs, or the specific user is using an older blender?

I can perhaps add some weight to the windows theory: on our project we frequently get files back from windows users with similarly weird and broken paths, but only from windows, not other os users. It used to be much worse some years ago, but perhaps there are still lingering bugs, or the specific user is using an older blender?
Campbell Barton self-assigned this 2014-11-17 11:42:16 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Talked to Campbell, he wants to have a careful look into such a fragile area.

Talked to Campbell, he wants to have a careful look into such a fragile area.

This issue was referenced by 72f75927f5

This issue was referenced by 72f75927f5079e72e45019899bdea384447d5992

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 72f75927f5.

Closed by commit 72f75927f5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42588
No description provided.