Fix T42588: Absolute paths not cleaned on win32

Making paths absolute would leave in "\..\" part on windows.